<resources>
    <string name="app_name">"Material Design Codelab "</string>
    <string name="action_settings">Settings</string>
    <string name="item_title">Palais Garnier</string>
    <string name="item_desc">The Palais Garnier which locates in Paris was built from 1861 for
        the Paris Opera.
    </string>
    <string name="detail_desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
        eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
        nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
        irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
        pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
        deserunt mollit anim id est laborum.
    </string>
    <string name="detail_location">"8 Rue Scribe, 75009 Paris, France"</string>
    <string name="luis_gomez">Luis Gomez</string>
    <string name="desarrollador_app_y_web">Desarrollador APP Y WEB</string>
    <string name="tlf_669739931">TLF: 669739931</string>
    <string name="luisgomezlinares_gmail_com">luisgomezlinares@gmail.com</string>
    <string name="contacto">Contacto</string>
    <string name="volver">Volver</string>
    <string name="location">Location</string>
    <string name="description">Description</string>
    <string name="action">Action</string>
    <string name="sitios_del_mundo">Sitios del mundo</string>
    <string name="email_luisgomezlinares_gmail_com">Email: luisgomezlinares@gmail.com</string>
</resources>