<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:padding="20dp"
        android:orientation="vertical"
        android:background="@drawable/fondo24"
        tools:ignore="MissingConstraints">


        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:background="#61272727"
            android:layout_marginBottom="0dp"
            >


            <ImageView
                android:id="@+id/header2"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/foto_perfil_circle" />

            <TextView
                android:id="@+id/texto1"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/header2"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:text="@string/luis_gomez"
                android:textColor="#fff"
                android:textStyle="bold"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/oficio"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/texto1"
                android:layout_toEndOf="@+id/header2"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:text="@string/desarrollador_app_y_web"
                android:textColor="#fff"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tlf"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/oficio"
                android:layout_toEndOf="@+id/header2"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:text="@string/tlf_669739931"
                android:textColor="#fff"
                android:textSize="12sp" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp"
            android:orientation="vertical"
            android:background="#61272727">

            <TextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:layout_marginStart="0dp"
                android:text="@string/email_luisgomezlinares_gmail_com"
                android:textColor="#fff"
                android:textSize="12sp"
                android:layout_marginBottom="20dp"
                android:layout_gravity="center"
                android:gravity="center"
                />

            <View
                android:id="@+id/linea"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="#fff"/>


            <ImageView
                android:id="@+id/tlf1"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="0dp"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/telefono"
                android:layout_gravity="center"
                />



            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="20dp"
                android:layout_gravity="center"
                android:gravity="center">


                <ImageView
                    android:id="@+id/email1"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="20dp"
                    android:scaleType="fitXY"
                    app:srcCompat="@drawable/email_icon"
                    />


                <ImageView
                    android:id="@+id/github"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginStart="20dp"
                    android:scaleType="fitXY"
                    app:srcCompat="@drawable/github_icon"
                    />


            </LinearLayout>

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="20dp"
                android:layout_gravity="center"
                android:gravity="center">


                <ImageView
                    android:id="@+id/twitter"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="20dp"
                    android:scaleType="fitXY"
                    app:srcCompat="@drawable/twitter_icon"
                    />


                <ImageView
                    android:id="@+id/linkedin"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginStart="20dp"
                    android:scaleType="fitXY"
                    app:srcCompat="@drawable/linkedin_icon"
                    />


            </LinearLayout>

            <Button
                android:id="@+id/boton"
                android:layout_width="165dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="#E91E63"
                android:text="@string/volver"
                android:textColor="#fff"
                android:gravity="center"
                android:layout_gravity="center"
                />

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>


